--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 	<title>Portfolio Prototype</title>
 	<meta charset = 'UTF-8'/>
 	<link rel = "stylesheet" href = 'css/master.css' type = 'text/css'/>
+	<link rel = 'stylesheet' href = 'http://cdn.jsdelivr.net/jquery.slick/1.3.8/slick.css' type = 'text/css'/>
 	<script type = 'text/javascript' src = 'js/holder.js'></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script type="text/javascript" src = 'http://cdn.jsdelivr.net/jquery.slick/1.3.8/slick.min.js'></script>
 	<script type = 'text/javascript'>
 
 		//on hover of work tile, expand 10% and add a shadow on the right side with 3px margins
@@ -20,11 +22,23 @@
 			//build src string
 			var holderSrc = 'holder.js/' + viewW + 'x' + viewH;
 			$('.showWork').attr('src', holderSrc);
+			console.log(holderSrc);
 
 			$(window).resize(function(){
-				$('.showWork').attr('src', holderSrc);
 				viewH = $(window).height();
 				viewW = $(window).width();
+				holderSrc = 'holder.js/' + viewH + 'x' + viewH;
+				console.log(holderSrc);
+				$('.showWork').attr('src', holderSrc);
+			});
+
+
+			/*INITIALIZE SLICK */
+
+			$('.test_carousel').slick({
+				infinte:true,
+				slidesToShow: 1,
+				slidesToScroll: 2
 			});
 
 		/* END DOCUMENT READY */
@@ -34,14 +48,17 @@
 </head>
 <body>
 
-	<img src = 'holder.js/1200x800' class = 'showWork' style = 'position: relative;'>
+	<div class = 'test_carousel'>
+		<div><img src = 'holder.js/1200x800' class = 'showWork' style = 'position: relative;'></div>
+		<div><img src = 'holder.js' class = 'showWork'></div>
+	</div>
 	<hr>
 	<img src = 'holder.js/1200x800' class = 'showWork' style = 'text-align:center;'>
 
 	<div id = 'workHolder'>
-		<img src = 'holder.js/450x450/sky' class = 'showWork' style = 'position: relative;'>
-		<img src = 'holder.js/450x450/sky' class = 'showWork' style = 'position:relative;'>
-		<img src = 'holder.js/450x450/lava' class = 'showWork' style = 'position:relative;'>
+		<img src = 'holder.js/450x450/sky' class = 'work' style = 'position: relative;'>
+		<img src = 'holder.js/450x450/sky' class = 'work' style = 'position:relative;'>
+		<img src = 'holder.js/450x450/lava' class = 'work' style = 'position:relative;'>
 	</div>
 
 	<hr>
