--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 	<title>Portfolio Prototype</title>
 	<meta charset = 'UTF-8'/>
 	<link rel = "stylesheet" href = 'css/master.css' type = 'text/css'/>
-	<link rel = 'stylesheet' href = 'http://cdn.jsdelivr.net/jquery.slick/1.3.8/slick.css' type = 'text/css'/>
+	<link rel="stylesheet" type="text/css" href="slick-master/slick/slick.css"/>
 	<script type = 'text/javascript' src = 'js/holder.js'></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script type="text/javascript" src = 'http://cdn.jsdelivr.net/jquery.slick/1.3.8/slick.min.js'></script>
 	<script type = 'text/javascript'>
 
 		//on hover of work tile, expand 10% and add a shadow on the right side with 3px margins
@@ -35,11 +34,7 @@
 
 			/*INITIALIZE SLICK */
 
-			$('.test_carousel').slick({
-				infinte:true,
-				slidesToShow: 1,
-				slidesToScroll: 2
-			});
+			$('.test-carousel').slick();
 
 		/* END DOCUMENT READY */
 		});
@@ -48,9 +43,11 @@
 </head>
 <body>
 
-	<div class = 'test_carousel'>
-		<div><img src = 'holder.js/1200x800' class = 'showWork' style = 'position: relative;'></div>
-		<div><img src = 'holder.js' class = 'showWork'></div>
+	<div class = 'test-carousel'>
+		<div><p>text goes here</p></div>
+		<div><p>content</p></div>
+		<div><p>content</p></div>
+		<div><p>content</p></div>
 	</div>
 	<hr>
 	<img src = 'holder.js/1200x800' class = 'showWork' style = 'text-align:center;'>
@@ -73,7 +70,7 @@
 
 
 
-
+<script type="text/javascript" src="slick-master/slick/slick.min.js"></script>
 </body>
 <!-- <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
 </html>
