fixed horizontal placement of tiles
FINALLY FIXED. Working on integrating design assets.

--- a/index.html
+++ b/index.html
@@ -48,19 +48,21 @@
 
 	<div id = 'workHolder'>
 		<div class = 'tile'>
-			<div class = 'titleBar'>
+			<div class = 'tileBar'>
 				<h2 class = 'titleHeader'>ZNATIONALS</h2>
 				<img src = 'design_assets/thumb1.jpg' class = 'work'>
+				<div class = 'tileText'>ZNationals is a project that is related to cars. We love cars. A lot. We would marry one if we could.</div>
+				<div class = 'projBtn'>VIEW PROJECT</div>
 			</div>
 		</div>
-		<div class = 'title'>
-			<div class = 'titleBar'>
+		<div class = 'tile'>
+			<div class = 'tileBar'>
 				<h2 class = 'titleHeader'>text here</h2>
 				<img src = 'design_assets/thumb2.jpg' class = 'work'>
 			</div>
 		</div>
-		<div class = 'title'>
-			<div class = 'titleBar'>
+		<div class = 'tile'>
+			<div class = 'tileBar'>
 				<h2 class = 'titleHeader'>text here</h2>
 				<img src = 'design_assets/thumb3.jpg' class = 'work'>
 			</div>
