--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
 	<script src="js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="./js/jquery.carousel.fullscreen.js"></script>
 	
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
+	<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js" type="text/javascript"></script>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-4390117-9', 'kenwheeler.github.io');
+	  ga('send', 'pageview');
+
+	</script>
+	
 	<script type = 'text/javascript'>
 	
 
@@ -68,7 +82,7 @@
 	<div id="nav-container">
 		<div id="logo"></div>
 		<ul>
-			<li><a id = 'workLink' href="#projectCarousel">WORK</a></li>
+			<li><a id = 'workLink' href="#topSlider">WORK</a></li>
 			<li id = 'aboutLink'><a href = '#about'>ABOUT</a></li>
 			<li><a id = 'contactLink' href="#contact">CONTACT</a></li>
 			<li><a id = 'resumeLink' href="#contact">RESUME</a></li>
@@ -76,6 +90,34 @@
 	</div>
 <!--End NAV-->
 <!--Top Slider-->
+
+			<div id = 'topSlider'class="content">
+				<div class="slider autoplay">
+					<div><img src="media/thumb1.jpg"/></div>
+					<div><img src="media/thumb2.jpg"/></div>
+					<div><img src="media/thumb3.jpg"/></div>
+					<div><img src="media/thumb4.jpg"/></div>
+					<div><img src="media/thumb5.jpg"/></div>
+				</div>
+			</div>
+			
+		<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+		<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.0/highlight.min.js"></script>
+		<script type="text/javascript" src="slick/slick.js"></script>
+		<script type="text/javascript" src="js/scripts.js"></script>
+
+		<script>hljs.initHighlightingOnLoad();</script>
+
+		<script type="text/javascript">
+			var disqus_shortname = 'slickcarousel';
+
+			(function() {
+				var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+				dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+				(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+			})();
+		</script>
 	
 <!--End Top Slider-->
 
