Added new icons for contact forms
New icons for contact form rcircles

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <!--End NAV-->
 <!--Top Slider-->
 
-			<div id = 'topSlider'class="content">
+			<div id = 'topSlider' class="content">
 				<div class="slider autoplay">
 					<div><img src="media/thumb1.jpg"/></div>
 					<div><img src="media/thumb2.jpg"/></div>
@@ -213,7 +213,6 @@
 
 	
 	<!-- End project 2 -->
-	<hr>
 	
 <!-- ABOUT PAGE -->
 	<div id="about">
@@ -240,7 +239,7 @@
 
 			<div class="quip-container qc-4">
 				<div class="quip quip-4"></div>
-				<h2>GUNS N STUFF</h2>
+				<h2>FAST CARS</h2>
 			</div>
 
 		</div>
