--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
 					</div>
 				  </div>
 				  <!-- Carousel navigation -->
-				  <a class="carousel-control left" href="#projectCarousel" data-slide="prev">&rarr;</a>
-				  <a class="carousel-control right" href="#projectCarousel" data-slide="next">&larr;</a>
+				  <a class="carousel-control left" href="#projectCarousel" data-slide="prev">&larr;</a>
+				  <a class="carousel-control right" href="#projectCarousel" data-slide="next">&rarr;</a>
 	</div>
 <!--project 2-->
 			<div id="projectCarousel3" class="carousel slide" data-ride="carousel" >
@@ -205,8 +205,8 @@
 					</div>
 				  </div>
 				  <!-- Carousel navigation -->
-				  <a class="carousel-control left" href="#projectCarousel3" data-slide="prev">&lsaquo;</a>
-				  <a class="carousel-control right" href="#projectCarousel3" data-slide="next">&rsaquo;</a>
+				  <a class="carousel-control left" href="#projectCarousel3" data-slide="prev">&larr;</a>
+				  <a class="carousel-control right" href="#projectCarousel3" data-slide="next">&rarr;</a>
 			</div>
 
 
@@ -266,11 +266,10 @@
 
 				<input type="submit" value="SEND IT!">
 			</form>
-			
-		</div>
 
-		<div id="resume-column">
-			<p>VIEW MY<br /><a href="#">RESUME</a></p>
+		<div id = 'resume-column'>
+			<div>VIEW MY<br/><a href="#">RESUME</a></div>
+		</div>
 		</div>
 	</div>
 
