moved the arrows down, changed the logo, but everything else is so
messed up i can’t even tell what im doing

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <!-- NAV -->
 	<div id="nav-container">
-		<div id="logo"></div>
+		<div id="logo">Lucky Number Seven</div>
 		<ul>
 			<li><a id = 'workLink' href="#topSlider">WORK</a></li>
 			<li id = 'aboutLink'><a href = '#about'>ABOUT</a></li>
