JSON Form appended
A PHP document with some server-side file manipulation for the JSON is
all done. Tested it on my local machine, it seems to work just fine.

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 				<div>VIEW MY<br/><a href="#">RESUME</a></div>
 			</div>
 
-			<form id = 'appendProject'>
+			<form id = 'appendProject' action = 'appendJson.php' method = 'GET'>
 				<label>Add a new project!</label>
 				<input type = 'text' name = 'projName' required placeholder = 'Add Project...'>
 
